src/grammar.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Nodes: peg$parseNodes },
        peg$startRuleFunction  = peg$parseNodes,

        peg$c0 = { type: "other", description: "include" },
        peg$c1 = "/>",
        peg$c2 = { type: "literal", value: "/>", description: "\"/>\"" },
        peg$c3 = function(tag) {
            return {
              type: 'include',
              file: tag.file,
              nodes: []
            }
          },
        peg$c4 = ">",
        peg$c5 = { type: "literal", value: ">", description: "\">\"" },
        peg$c6 = "</include>",
        peg$c7 = { type: "literal", value: "</include>", description: "\"</include>\"" },
        peg$c8 = function(tag, nodes) {
            return {
              type: 'include',
              file: tag.file,
              nodes: nodes
            }
          },
        peg$c9 = "<include",
        peg$c10 = { type: "literal", value: "<include", description: "\"<include\"" },
        peg$c11 = "file",
        peg$c12 = { type: "literal", value: "file", description: "\"file\"" },
        peg$c13 = "=",
        peg$c14 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c15 = function(file) {
            return {
              file: file
            }
          },
        peg$c16 = function(node) { return node },
        peg$c17 = { type: "other", description: "inline" },
        peg$c18 = "<inline",
        peg$c19 = { type: "literal", value: "<inline", description: "\"<inline\"" },
        peg$c20 = function(file) {
            return {
              type: 'inline',
              file: file
            }
          },
        peg$c21 = { type: "other", description: "definition" },
        peg$c22 = "<",
        peg$c23 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c24 = ":",
        peg$c25 = { type: "literal", value: ":", description: "\":\"" },
        peg$c26 = "</",
        peg$c27 = { type: "literal", value: "</", description: "\"</\"" },
        peg$c28 = function(def, name, nodes, _def) { return def == _def },
        peg$c29 = function(def, name, nodes, _def, _name) { return name == _name },
        peg$c30 = function(def, name, nodes, _def, _name) {
            return {
              type: 'def',
              mode: def,
              name: name,
              nodes: nodes
            }
          },
        peg$c31 = "def",
        peg$c32 = { type: "literal", value: "def", description: "\"def\"" },
        peg$c33 = "append",
        peg$c34 = { type: "literal", value: "append", description: "\"append\"" },
        peg$c35 = "prepend",
        peg$c36 = { type: "literal", value: "prepend", description: "\"prepend\"" },
        peg$c37 = { type: "other", description: "block" },
        peg$c38 = "<block:",
        peg$c39 = { type: "literal", value: "<block:", description: "\"<block:\"" },
        peg$c40 = function(name) {
            return {
              type: 'block',
              name: name,
              nodes: []
            }
          },
        peg$c41 = "</block:",
        peg$c42 = { type: "literal", value: "</block:", description: "\"</block:\"" },
        peg$c43 = function(name, nodes, _name) { return name == _name },
        peg$c44 = function(name, nodes, _name) {
            return {
              type: 'block',
              name: name,
              nodes: nodes
            }
          },
        peg$c45 = { type: "other", description: "comment" },
        peg$c46 = "<!--",
        peg$c47 = { type: "literal", value: "<!--", description: "\"<!--\"" },
        peg$c48 = "-->",
        peg$c49 = { type: "literal", value: "-->", description: "\"-->\"" },
        peg$c50 = function(content) {
            return {
              type: 'comment',
              content: content
            }
          },
        peg$c51 = { type: "any", description: "any character" },
        peg$c52 = { type: "other", description: "var" },
        peg$c53 = "<var:",
        peg$c54 = { type: "literal", value: "<var:", description: "\"<var:\"" },
        peg$c55 = "</var:",
        peg$c56 = { type: "literal", value: "</var:", description: "\"</var:\"" },
        peg$c57 = function(name, expr, _name) { return name == _name },
        peg$c58 = function(name, expr, _name) {
            return {
              type: 'var',
              name: name,
              expr: expr
            }
          },
        peg$c59 = { type: "other", description: "expression" },
        peg$c60 = "#{",
        peg$c61 = { type: "literal", value: "#{", description: "\"#{\"" },
        peg$c62 = "}",
        peg$c63 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c64 = function(expr) {
            return {
              type: 'expr',
              escape: true,
              expr: expr
            }
          },
        peg$c65 = "!{",
        peg$c66 = { type: "literal", value: "!{", description: "\"!{\"" },
        peg$c67 = function(expr) {
            return {
              type: 'expr',
              escape: false,
              expr: expr
            }
          },
        peg$c68 = /^[^}{"'<]/,
        peg$c69 = { type: "class", value: "[^}{\"'<]", description: "[^}{\"'<]" },
        peg$c70 = "{",
        peg$c71 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c72 = { type: "other", description: "if" },
        peg$c73 = "<if",
        peg$c74 = { type: "literal", value: "<if", description: "\"<if\"" },
        peg$c75 = "expr",
        peg$c76 = { type: "literal", value: "expr", description: "\"expr\"" },
        peg$c77 = "</if>",
        peg$c78 = { type: "literal", value: "</if>", description: "\"</if>\"" },
        peg$c79 = function(expr, nodes) {
            return {
              type: 'if',
              when: [{
                type: 'when',
                expr: expr,
                nodes: nodes
              }]
            }
          },
        peg$c80 = "<if>",
        peg$c81 = { type: "literal", value: "<if>", description: "\"<if>\"" },
        peg$c82 = function(when, otherwise) {
              return {
                type: 'if',
                when: when,
                otherwise: otherwise
              }
            },
        peg$c83 = { type: "other", description: "when" },
        peg$c84 = "<when",
        peg$c85 = { type: "literal", value: "<when", description: "\"<when\"" },
        peg$c86 = "</when>",
        peg$c87 = { type: "literal", value: "</when>", description: "\"</when>\"" },
        peg$c88 = function(expr, nodes) {
            return {
              type: 'when',
              expr: expr,
              nodes: nodes
            }
          },
        peg$c89 = { type: "other", description: "otherwise" },
        peg$c90 = "<otherwise>",
        peg$c91 = { type: "literal", value: "<otherwise>", description: "\"<otherwise>\"" },
        peg$c92 = "</otherwise>",
        peg$c93 = { type: "literal", value: "</otherwise>", description: "\"</otherwise>\"" },
        peg$c94 = function(nodes) {
            return {
              type: 'otherwise',
              nodes: nodes
            }
          },
        peg$c95 = { type: "other", description: "each" },
        peg$c96 = "<each:",
        peg$c97 = { type: "literal", value: "<each:", description: "\"<each:\"" },
        peg$c98 = "in",
        peg$c99 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c100 = "</each:",
        peg$c101 = { type: "literal", value: "</each:", description: "\"</each:\"" },
        peg$c102 = function(name, expr, nodes, _name) { return name == _name },
        peg$c103 = function(name, expr, nodes, _name) {
            return {
              type: 'each',
              name: name,
              expr: expr,
              nodes: nodes
            }
          },
        peg$c104 = "include",
        peg$c105 = { type: "literal", value: "include", description: "\"include\"" },
        peg$c106 = "inline",
        peg$c107 = { type: "literal", value: "inline", description: "\"inline\"" },
        peg$c108 = "block:",
        peg$c109 = { type: "literal", value: "block:", description: "\"block:\"" },
        peg$c110 = "def:",
        peg$c111 = { type: "literal", value: "def:", description: "\"def:\"" },
        peg$c112 = "append:",
        peg$c113 = { type: "literal", value: "append:", description: "\"append:\"" },
        peg$c114 = "prepend:",
        peg$c115 = { type: "literal", value: "prepend:", description: "\"prepend:\"" },
        peg$c116 = "if",
        peg$c117 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c118 = "when",
        peg$c119 = { type: "literal", value: "when", description: "\"when\"" },
        peg$c120 = "otherwise",
        peg$c121 = { type: "literal", value: "otherwise", description: "\"otherwise\"" },
        peg$c122 = "each:",
        peg$c123 = { type: "literal", value: "each:", description: "\"each:\"" },
        peg$c124 = "var:",
        peg$c125 = { type: "literal", value: "var:", description: "\"var:\"" },
        peg$c126 = { type: "other", description: "plain text" },
        peg$c127 = /^[^<#!$]/,
        peg$c128 = { type: "class", value: "[^<#!$]", description: "[^<#!$]" },
        peg$c129 = "/",
        peg$c130 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c131 = "!--",
        peg$c132 = { type: "literal", value: "!--", description: "\"!--\"" },
        peg$c133 = /^[#!$]/,
        peg$c134 = { type: "class", value: "[#!$]", description: "[#!$]" },
        peg$c135 = { type: "other", description: "variable name" },
        peg$c136 = /^[a-z]/,
        peg$c137 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c138 = /^[a-zA-Z0-9_]/,
        peg$c139 = { type: "class", value: "[a-zA-Z0-9_]", description: "[a-zA-Z0-9_]" },
        peg$c140 = { type: "other", description: "attribute value" },
        peg$c141 = { type: "other", description: "string" },
        peg$c142 = "'",
        peg$c143 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c144 = /^[^']/,
        peg$c145 = { type: "class", value: "[^']", description: "[^']" },
        peg$c146 = function(chars) { return chars },
        peg$c147 = "\"",
        peg$c148 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c149 = /^[^"]/,
        peg$c150 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c151 = "\\",
        peg$c152 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c153 = /^[^\n\r\u2028\u2029]/,
        peg$c154 = { type: "class", value: "[^\\n\\r\\u2028\\u2029]", description: "[^\\n\\r\\u2028\\u2029]" },
        peg$c155 = { type: "other", description: "whitespace" },
        peg$c156 = /^[ \t\n\r]/,
        peg$c157 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseNodes() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseNode();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseNode();
      }

      return s0;
    }

    function peg$parseNode() {
      var s0;

      s0 = peg$parseZenNode();
      if (s0 === peg$FAILED) {
        s0 = peg$parsePlain();
      }

      return s0;
    }

    function peg$parseZenNode() {
      var s0;

      s0 = peg$parseInclude();
      if (s0 === peg$FAILED) {
        s0 = peg$parseInline();
        if (s0 === peg$FAILED) {
          s0 = peg$parseBlock();
          if (s0 === peg$FAILED) {
            s0 = peg$parseComment();
            if (s0 === peg$FAILED) {
              s0 = peg$parseVar();
              if (s0 === peg$FAILED) {
                s0 = peg$parseFlowControl();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseExpression();
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseInclude() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$parseIncludeSelfClosing();
      if (s0 === peg$FAILED) {
        s0 = peg$parseIncludeWithDefs();
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c0); }
      }

      return s0;
    }

    function peg$parseIncludeSelfClosing() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseIncludeTagStart();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c1) {
          s2 = peg$c1;
          peg$currPos += 2;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c2); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseIncludeWithDefs() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseIncludeTagStart();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 62) {
          s2 = peg$c4;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsews();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsews();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseIncludeNodes();
            if (s4 !== peg$FAILED) {
              if (input.substr(peg$currPos, 10) === peg$c6) {
                s5 = peg$c6;
                peg$currPos += 10;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c7); }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c8(s1, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseIncludeTagStart() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c9) {
        s1 = peg$c9;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c11) {
            s3 = peg$c11;
            peg$currPos += 4;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsews();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsews();
            }
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 61) {
                s5 = peg$c13;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parsews();
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$parsews();
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseAttrValue();
                  if (s7 !== peg$FAILED) {
                    s8 = [];
                    s9 = peg$parsews();
                    while (s9 !== peg$FAILED) {
                      s8.push(s9);
                      s9 = peg$parsews();
                    }
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c15(s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseIncludeNodes() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseIncludeNode();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseIncludeNode();
      }

      return s0;
    }

    function peg$parseIncludeNode() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseDef();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsews();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c16(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseVar();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parsews();
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c16(s1);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parseInline() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 7) === peg$c18) {
        s1 = peg$c18;
        peg$currPos += 7;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c11) {
            s3 = peg$c11;
            peg$currPos += 4;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsews();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsews();
            }
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 61) {
                s5 = peg$c13;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parsews();
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$parsews();
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseAttrValue();
                  if (s7 !== peg$FAILED) {
                    s8 = [];
                    s9 = peg$parsews();
                    while (s9 !== peg$FAILED) {
                      s8.push(s9);
                      s9 = peg$parsews();
                    }
                    if (s8 !== peg$FAILED) {
                      if (input.substr(peg$currPos, 2) === peg$c1) {
                        s9 = peg$c1;
                        peg$currPos += 2;
                      } else {
                        s9 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c2); }
                      }
                      if (s9 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c20(s7);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }

      return s0;
    }

    function peg$parseDef() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;
